hphp/test/zend/good/ext-spl/SplFileInfo_001.php
<?php
$x = new splfileinfo(1);
$x->__construct(1);

echo "done!\n";
?>